# Practica1-PA

./: CMakeLists.txt  main.cpp
include/: Dibuix.h  Elipse.h  FiguraGeometrica.h  Rectangle.h
src/: Dibuix.cpp  Elipse.cpp  FiguraGeometrica.cpp  Rectangle.cpp
